end work with css

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
     margin: 0;
     padding: 0;
 
-    color: var(--black);
     background: var(--white);
 }
 main{
@@ -21,4 +20,18 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+.dot{
+    width: 256px;
+    height: 256px;
+
+    background: var(--white);
+    border-radius: 50%;
+}
+
+
+.dark{
+    background: var(--black);
 }
