--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body{
     margin: 0;
     padding: 0;
 
+    transition: .5s background;
+
     background: var(--white);
 }
 main{
@@ -26,6 +28,8 @@ main{
 .dot{
     width: 256px;
     height: 256px;
+
+    transition: .5s background;
 
     background: var(--white);
     border-radius: 50%;
