--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ main{
     width: 256px;
     height: 256px;
 
+    margin: 5%;
+
     transition: .5s background;
 
     background: var(--white);
